--- a/src/components/CharacterCard/Card.module.css
+++ b/src/components/CharacterCard/Card.module.css
@@ -1,3 +1,46 @@
 .card {
-  width: 300px;
+  max-width: 300px;
+  margin-bottom: 30px;
+  margin-right: 5px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.imageSection {
+  position: relative;
+  height: 300px;
+}
+
+.info {
+  position: absolute;
+  bottom: 0;
+  background: rgb(32, 35, 41);
+  opacity: .8;
+  z-index: 99;
+  width: 100%;
+  padding: 10px;
+  color: rgb(245, 245, 245);;
+}
+
+.content {
+  background-color: rgb(51, 51, 51);
+  padding: 20px;
+}
+
+.characterFeature {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: rgb(158, 158, 158);
+  font-size: 12px;
+  padding: 0.75rem 0px 0.375rem;
+  border-bottom: 1px solid rgb(68, 68, 68);
+}
+
+.characterFeature:last-child {
+  border-bottom: none;
+}
+
+.characterFeature span:last-child {
+  color: rgb(255, 152, 0);
 }
